# go-practice

./: .gitignore  .gitlab-ci.yml  .golangci.yaml  .golangci.yml  README.MD  build.sh  cookies.json  everything_test.go  flow_forward.md  go.mod  go.sum  golangci-lint.sh  init.sh  iptables+firewalld.md  main.go  main.py  main_test.go  map_reduce_test.go  nginx_tcp.conf  params_check.go  params_check_test.go  pyproject.toml  reflect_test.go  resize_img_test.go  rod_test.go  temp.http  test.go  test.htm  test.json  test.sh  test.yaml  x_test.go
appdemo/: go.mod  (+3 more)
pythonx/: .env  1.docx  BROWSER_USE_AGENTS.MD  autogen_test.py  browser_use_test.py  introduction.txt  kimi_test.py  langchain_silicon_flow.py  langchain_test.py  langchain_test_chatbot.py  langchain_test_embed.py  langchain_test_first_rag_app.py  main.py  pandas_test.py  pdf2word.py  pyproject.toml  requirements.txt
pythonx/.cache/41/: cache.db
pythonx/assets/: ai_table.xlsx
pythonx/goodpkgs/: html2text_test.py
pythonx/mcp-server-demo/: pyproject.toml
pythonx/mcp-server-demo/mcp_server_weather_lei.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pythonx/mcp-server-demo/src/mcp_server_demo_lei/: main.py
pythonx/mcp_weather/: README.md  pyproject.toml  weather-server.py
pythonx/spider/: README.md  exception.html  infra.py  main.py  model.py  pyproject.toml  s1.py  theworlds50best-2025-06-05.xlsx  world_top50_bars.py
pythonx/stock/: stock1.py
pythonx/vectordb/: chroma.sqlite3
pythonx/zt_query_table/: pyproject.toml
pythonx/zt_query_table/src/zt_query_table/: __init__.py  impl.py
(+286 files in other folders)
